--- a/diagrams/src/App.css
+++ b/diagrams/src/App.css
@@ -1,4 +1,12 @@
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
+}
+
+.container {
+  display: grid;
+  width: 100%;
+  height: 300px;
+  background-color: red;
 }
