--- a/diagrams/src/components/diagram/Diagram.css
+++ b/diagrams/src/components/diagram/Diagram.css
@@ -1,5 +1,6 @@
 .Diagram {
-  background-color: blue;
+  background-color: var(--main-bg-color);
   padding: 16px;
   text-align: center;
+  grid-area: main;
 }
