--- a/diagrams/src/App.css
+++ b/diagrams/src/App.css
@@ -14,7 +14,7 @@
   grid-template-rows: 60px auto 60px;
   grid-template-areas:
     "hd hd"
-    "sidebar main"
+    "main main"
     "footer footer";
   width: 100%;
   height: 300px;
