--- a/diagrams/src/components/diagram/Diagram.scss
+++ b/diagrams/src/components/diagram/Diagram.scss
@@ -1,7 +1,7 @@
 .Diagram {
   padding: 16px;
   text-align: center;
-  height: 100%;
+  height: 600px;
   grid-area: main;
   background-color: rgb(60, 60, 60);
   background-size: 50px 50px;
@@ -18,7 +18,7 @@
       rgba(255, 255, 255, 0.05) 26%,
       transparent 27%,
       transparent 74%,
-      rgba(255, 255, 255, 0.05) 75%,
+      rgba(255, 255, 255, 0.05) 50%,
       rgba(255, 255, 255, 0.05) 76%,
       transparent 77%,
       transparent
@@ -30,7 +30,7 @@
       rgba(255, 255, 255, 0.05) 26%,
       transparent 27%,
       transparent 74%,
-      rgba(255, 255, 255, 0.05) 75%,
+      rgba(255, 255, 255, 0.05) 50%,
       rgba(255, 255, 255, 0.05) 76%,
       transparent 77%,
       transparent
